hydroflow/tests/snapshots/surface_context__context_mut@graphvis_mermaid.snap
---
source: hydroflow/tests/surface_context.rs
expression: df.serde_graph().unwrap().to_mermaid()
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#02f,color:#fff,stroke:#000
classDef pushClass fill:#ff0,stroke:#000
linkStyle default stroke:#aaa,stroke-width:4px,color:red,font-size:1.5em;
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    1v1[\"(1v1) <tt>source_iter(0 .. 10)</tt>"/]:::pullClass
    2v1[\"(2v1) <tt>map(| n | context.add_state(n))</tt>"/]:::pullClass
    1v1--->2v1
end
subgraph sg_2v1 ["sg_2v1 stratum 1"]
    3v1[\"(3v1) <tt>next_stratum()</tt>"/]:::pullClass
    4v1[/"(4v1) <tt>for_each(| handle | println! (&quot;{:?}: {}&quot;, handle, context.state_ref(handle)))</tt>"\]:::pushClass
    3v1--->4v1
end
2v1--->5v1
5v1["(5v1) <tt>handoff</tt>"]:::otherClass
5v1===o3v1

