hydroflow/tests/snapshots/surface_context__context_ref@graphvis_dot.snap
---
source: hydroflow/tests/surface_context.rs
expression: df.meta_graph().unwrap().to_dot()
---
digraph {
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n1v1 [label="(n1v1) source_iter([()])", fontname=Monaco, shape=invhouse, style = filled, color = "#0022ff", fontcolor = "#ffffff"]
        n2v1 [label="(n2v1) for_each(|()| {\l    println!(\l        \"Current tick: {}, stratum: {}\", context.current_tick(), context\l        .current_stratum()\l    )\l})\l", fontname=Monaco, shape=house, style = filled, color = "#ffff00"]
        n1v1 -> n2v1
    }
}

