hydroflow/tests/snapshots/surface_context__context_ref@graphvis_mermaid.snap
---
source: hydroflow/tests/surface_context.rs
expression: df.serde_graph().unwrap().to_mermaid()
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#02f,color:#fff,stroke:#000
classDef pushClass fill:#ff0,stroke:#000
linkStyle default stroke:#aaa,stroke-width:4px,color:red,font-size:1.5em;
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    1v1[\"(1v1) <tt>source_iter([()])</tt>"/]:::pullClass
    2v1[/"(2v1) <tt>for_each(| () | println!<br>(&quot;Current tick: {}, stratum: {}&quot;, context.current_tick(),<br>context.current_stratum()))</tt>"\]:::pushClass
    1v1--->2v1
end

